Fix: change ship image z-index to 0 to allow re-placing ship in cell covered by image. Add style to increase z-index in checkPlacement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -510,6 +510,11 @@ footer {
 
 #player-gameboard img,
 #computer-gameboard img {
+    z-index: 0;
+}
+
+/* class to increase z-index and bring ship image to top when placed */
+.placed {
     z-index: 100;
 }
 
